--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -74,8 +74,8 @@
 				<h4 class="text-center">Contact @ +91-8296242028 ,
 					+91-9980923226</h4>
 				<h5 class="text-center">
-					Copyrights 2020 by <a href="http://mithuntechnologies.com/">Mithun
-						Technologies</a>
+					Copyrights 2020 by <a href="http://digieras.com/">Digieras
+						Tech</a>
 				</h5>
 			</div>
 		</div>
