--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -69,10 +69,10 @@
 				<img th:src="@{/img/mithunlogo.jpg}" alt="logo" height="200">
 			</div>
 			<div class="col-md-8">
-				<h4 class="text-center">Mithun Technologies - Bengaluru,Karnataka,
+				<h4 class="text-center">Digieras Tech - Lucknow,UttarPradesh,
 					Training, Development Center.</h4>
-				<h4 class="text-center">Contact @ +91-8296242028 ,
-					+91-9980923226</h4>
+				<h4 class="text-center">Contact @ +91-7017756881 ,
+					+91-7017756881</h4>
 				<h5 class="text-center">
 					Copyrights 2020 by <a href="http://digieras.com/">Digieras
 						Tech</a>
