--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,7 +66,7 @@
 
 		<div class="row-md-8">
 			<div class="col-md-3">
-				<img th:src="@{/img/mithunlogo.jpg}" alt="logo" height="200">
+				<img th:src="@{/img/unnamed.jpg}" alt="logo" height="200">
 			</div>
 			<div class="col-md-8">
 				<h4 class="text-center">Digieras Tech - Lucknow,UttarPradesh,
